--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-NEXT_APP_AUTH0_DOMAIN=dev-3kvo8gurvbtg3koc.us.auth0.com
-NEXT_APP_AUTH0_APP_ID=PHGzChWplNnxn9QWG28nnkNiYVe2hKn2
+NEXT_PUBLIC_APP_AUTH0_DOMAIN=dev-3kvo8gurvbtg3koc.us.auth0.com
+NEXT_PUBLIC_APP_AUTH0_APP_ID=PHGzChWplNnxn9QWG28nnkNiYVe2hKn2
+
+NEXT_PUBLIC_CIRCLE_APP_ID=3df1d810-6b73-551d-8cc9-7a3e90ba37ec
+
+NEXT_PUBLIC_CIRCLE_API_KEY=TEST_API_KEY:0833d7b1cd9906b55232e39711cf04d8:d506b815ab60633f10952e43ba01b02f
 
 
 
