--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@circle-fin/user-controlled-wallets": "^3.0.0",
+    "@circle-fin/w3s-pw-web-sdk": "^1.0.10",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "convex": "^1.11.2",
     "konsta": "^3.1.3",
     "next": "14.2.3",
